Change databes structure!
