# Api/docs/swagger.yaml
@@ -73,13 +73,11 @@ definitions:
         type: string
       first_name:
         type: string
-      gender:
-        type: string
       last_name:
         type: string
       password:
         type: string
-      registration_code:
+      phone_number:
         type: string
     type: object
   auth.SignUpResponse:
